feat. Add investment feat. Authentication handling